--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -17,7 +17,7 @@
   <div class="col-md-3 ">
 
 
-    <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => {:method => :put}) do |f| %>
+    <%= form_for(resource, :as => resource_name, :url => main_app.registration_path(resource_name), :html => {:method => :put}) do |f| %>
         <div><%= f.label :first_name %>
           <div class="form-group">
             <%= f.text_field :first_name, :autofocus => true, class: 'form-control' %>
