--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -9,8 +9,8 @@
         <img src="<%= gravatar_for(current_user.email) %>" style="width: 30px; height: 30px; margin-right: 5px;" class="img-rounded">
         <a id="user_info" href="#" class="dropdown-toggle" data-toggle="dropdown"><%= current_user_details %></a>
         <ul class="dropdown-menu text-left">
-          <li><%= link_to '<i class="glyphicon glyphicon-user"></i> My account'.html_safe, edit_user_registration_path %> </li>
-          <li><%= link_to '<i class="glyphicon glyphicon-log-out"></i> Log out'.html_safe, destroy_user_session_path, :method => :delete %></li>
+          <li><%= link_to '<i class="glyphicon glyphicon-user"></i> My account'.html_safe, main_app.edit_user_registration_path %> </li>
+          <li><%= link_to '<i class="glyphicon glyphicon-log-out"></i> Log out'.html_safe, main_app.destroy_user_session_path, :method => :delete %></li>
         </ul>
       </div>
       <% end %>
@@ -29,12 +29,13 @@
     </div>
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav nav-justified">
-        <li><%= link_to 'About us', page_path('about_us') %></li>
-        <li><%= link_to 'Our projects', projects_path %></li>
-        <li><%= link_to 'Our members', users_index_path %></li>
+        <li><%= link_to 'About us', main_app.page_path('about_us') %></li>
+        <li><%= link_to 'Our projects', main_app.projects_path %></li>
+        <li><%= link_to 'Our members', main_app.users_index_path %></li>
+        <li><%= link_to 'Q&S´s', simon_asks.questions_path %></li>
         <% unless user_signed_in? %>
-            <li><%= link_to 'Log in', new_user_session_path %></li>
-            <li><%= link_to 'Sign up', new_user_registration_path %></li>
+            <li><%= link_to 'Log in', main_app.new_user_session_path %></li>
+            <li><%= link_to 'Sign up', main_app.new_user_registration_path %></li>
         <% end %>
       </ul>
     </div>
