--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -53,7 +53,7 @@
         </div>
 
         <div class="collapse navbar-collapse">
-          <ul class="nav navbar-nav nav-justified">
+          <ul class="nav navbar-nav">
             <li><%= link_to 'About', static_page_path('About Us'), class: is_in_static_page?('About Us') ? 'active' : ''%></li>
             <li><%= link_to 'Projects', projects_path, class: active_if_controller_is('projects') %></li>
             <li><%= link_to 'Members', users_path, class: active_if_controller_is('users') %></li>
