--- a/app/assets/stylesheets/global/custom.css.scss
+++ b/app/assets/stylesheets/global/custom.css.scss
@@ -25,8 +25,6 @@ general style
 html, body {
   width: 100%;
   height: 100%;
-  /* keep scrollbar present all the time */
-  min-height: 101%;
   background-color: $off-white;
 
   /* The html and body elements cannot have any padding or margin. */
@@ -37,6 +35,7 @@ html, body {
 
 #main {
   padding-bottom: 40px;
+  padding-top: 70px;
 }
 
 /*  END - general style */
