added basic scroll based pagination. experiecing conflicts with user search so the logic has to be hammered out...

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -39,7 +39,8 @@
           <%= render 'user_list' %>
         </ul>
         <div>
-          <%= link_to 'Load More...', users_path(page: @users.next_page),
+          <%= will_paginate @users, renderer: BootstrapPagination::Rails %>
+          <%#= link_to 'Load More...', users_path(page: @users.next_page),
                       class: 'btn btn-default',
                       id: 'load-more',
                       remote: true if @users.next_page %>
