--- a/app/views/projects/_listing.html.erb
+++ b/app/views/projects/_listing.html.erb
@@ -1,24 +1,21 @@
-<section class="doc-preview">
+  <div class="col-lg-4">
+  <div class="project-thumbnail" style="position: relative; min-height: 350px; max-height: 350px;">
+    <img src="<%= project.image_url.present? ? project.image_url : 'http://placehold.it/320x125/EEE' %>" class="img-responsive">
 
-  <div class="row"> 
-    <% if project.image_url.present? %>
-      <div class="col-xs-12">
-        <%= image_tag project.image_url, class: 'img-responsive' %>
+    <div class="caption">
+      <h3 class=""><%= link_to project.title, project_path(project) %></h3>
+
+      <div style="font-size: 0.8em">
+        <span>Status: <strong style="font-style: normal;"><%= project.status.upcase %></strong></span>
       </div>
-    <% end %>
-  </div>
-  <div class="row">
-      <div class="col-xs-12">  
-        <h3><%= link_to project.title, project_path(project) %></h3>
-      </div>
-  </div>
-  <div class="row"> 
-    <div class="col-xs-9">     
-      <div class="stats">
+
+      <p><%= project.description.truncate(150, separator: ' ') %></p>
+
+      <div class="stats" style="position: absolute; bottom: 0; left: 0;">
         <ul>
           <% follower_count = project.followers.count %>
           <% if follower_count > 0 %>
-            <li data-toggle="tooltip" data-placement="top"
+            <li data-toggle="tooltip" data-placement="right"
                 title="<%= follower_count %> <%= 'member'.pluralize(follower_count) %>">
               <i class="fa fa-users"></i> <%= follower_count %>
             </li>
@@ -40,17 +37,7 @@
           <% end %>
         </ul>
       </div>
-      <div style="display: inline-block; font-size: 1.0em; font-style: italic;">
-        <div>Status: <strong style="font-style: normal;"><%= project.status.upcase %></strong></div>
-        <div><%= "Created #{time_ago_in_words(project.created_at)} ago" %> by <%= link_to project.user.display_name, user_path(project.user) %></div>
-      </div>
-  </div>
-  <div class="container-fluid">
-    <div class="row"> 
-      <div class="col-xs-12">
-        <p><%= project.description.truncate(250, separator: ' ') %></p>
-      </div>
     </div>
   </div>
 </div>
-</section>
+
