--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -14,13 +14,16 @@
     To get involved in any of the projects, join one of the <%= link_to 'scrums', events_path %> and reach out to us,
     or send us an email at <a href="mailto:info@agileventures.org">info@agileventures.org</a>.
   </p>
-  <%= will_paginate @projects %>
-  <ul id="project-list" style="list-style: none; padding-left: 0;">
-    <% @projects.each do |project| %>
-      <li class="listing">
-        <%= render 'listing', project: project %>
-      </li>
+  <section class="doc-preview" id="project-list">
+
+    <% @projects.each_slice(3) do |group| %>
+      <div class="row">
+        <% group.each do |project| %>
+          <%= render 'listing', project: project %>
+        <% end %>
+      </div>
     <% end %>
-  </ul>
-  <%= will_paginate @projects %>
+
+  </section>
+
 <% end %>
